--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number_to_string",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Converts Number to words",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/umeshramya/number_to_string/issues"
   },
-  "homepage": "https://github.com/umeshramya/number_to_string#readme"
+  "homepage": "https://github.com/umeshramya/number_to_string#readme",
+  "devDependencies": {
+    "@types/node": "^8.5.1",
+    "typescript": "^2.6.2"
+  }
 }
