--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "number_to_string",
+  "name": "multilingual-number-to-words",
   "version": "1.1.0",
-  "description": "Converts Number to words",
+  "description": "Converts to number in to words. one can get words written in any language. users can add there own language if not included",
   "main": "index.js",
   "scripts": {
     "start" : "tsc index.ts; tsc test_typescript_index.ts;", 
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/umeshramya/number_to_string.git"
+    "url": "git+https://github.com/umeshramya/multilingual-number-to-words.git"
   },
   "keywords": [
     "Number",
@@ -21,9 +21,9 @@
   "author": "Dr Umesh R Bilagi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/umeshramya/number_to_string/issues"
+    "url": "https://github.com/umeshramya/multilingual-number-to-words/issues"
   },
-  "homepage": "https://github.com/umeshramya/number_to_string#readme",
+  "homepage": "https://github.com/umeshramya/multilingual-number-to-words#readme",
   "devDependencies": {
     "@types/node": "^8.5.1",
     "typescript": "^2.6.2"
