--- a/package.json
+++ b/package.json
@@ -21,9 +21,5 @@
   "bugs": {
     "url": "https://github.com/umeshramya/multilingual-number-to-words/issues"
   },
-  "homepage": "https://github.com/umeshramya/multilingual-number-to-words#readme",
-  "devDependencies": {
-    "@types/node": "^8.5.1",
-    "typescript": "^2.6.2"
-  }
+  "homepage": "https://github.com/umeshramya/multilingual-number-to-words#readme"
 }
