--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "multilingual-number-to-words",
   "version": "5.0.4",
   "description": "Converts to number in to words. one can get words written in any language. users can add there own language if not included",
-  "main": "build/index.js",
-  "types": "lib",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "node build/index.js",
-    "dev" : "tsc -p . && yalc publish && cd test && yalc update multilingual-number-to-words && node index"
+    "dev": "tsc && yalc publish && cd test && yalc update multilingual-number-to-words && node index"
   },
   "repository": {
     "type": "git",
@@ -23,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/umeshramya/multilingual-number-to-words/issues"
   },
-  "homepage": "https://github.com/umeshramya/multilingual-number-to-words#readme"
+  "homepage": "https://github.com/umeshramya/multilingual-number-to-words#readme",
+  "devDependencies": {
+    "@types/node": "^15.12.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
+  },
+  "files": ["lib/**/*"]
+
 }
