--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
   },
   "homepage": "https://github.com/umeshramya/multilingual-number-to-words#readme",
   "devDependencies": {
-    "@types/node": "^15.12.3",
-    "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   },
-  "files": ["lib/**/*"]
-
+  "files": [
+    "lib/**/*"
+  ]
 }
