--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/umeshramya/multilingual-number-to-words#readme",
   "devDependencies": {
+    "typedoc": "^0.21.0",
     "typescript": "^4.3.4"
   },
   "files": [
